# ==============================================================================
# Copyright (C) 2021-2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

cmake_minimum_required(VERSION 3.1)

add_subdirectory(types)
add_subdirectory(common)
add_subdirectory(gvafilter)
add_subdirectory(gvahistory)
add_subdirectory(gvatensoracc)
add_subdirectory(gvatensorconverter)
add_subdirectory(gvatensorinference)
add_subdirectory(gvatensortometa)
add_subdirectory(gvavideototensor)
add_subdirectory(gvadrop)
add_subdirectory(bins)
add_subdirectory(preproc)
add_subdirectory(registrator)
