# ==============================================================================
# Copyright (C) 2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(base_histogram)
add_subdirectory(base_meta_overlay)

add_subdirectory(dlstreamer_logger)
