# ==============================================================================
# Copyright (C) 2021-2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(tensor_inference_openvino)
add_subdirectory(tensor_inference_openvino2)
